lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:28: error: method position has return statement; needs result type
	if (getX() <= zone(0).x) {return 0}
                                  ^Lander:30: error: method position has return statement; needs result type
		if ( getX() >= zone(1).x) {return 2}
                                           ^